# CodePractice

./: README.md  配置github.md
AI/: 10.人口分析案例(1).ipynb  10.人口分析案例.ipynb  11.pandas高级操作(1).ipynb  11.pandas高级操作.ipynb  12.2012美国大选献金项目数据分析.ipynb  13.matplotlib绘图.ipynb  14.Seaborn绘图.ipynb  15.pyecharts.ipynb  5.numpy模块.ipynb  6.pandas基础操作.ipynb  7.DataFrame基础操作巩固-股票分析(1).ipynb  8.基于pandas的数据清洗(1).ipynb  8.基于pandas的数据清洗(2).ipynb  8.基于pandas的数据清洗.ipynb  9.DataFrame的级联and合并操作.ipynb  lesson1.ipynb  lesson2.ipynb  maotai.csv  matotai.csv
AI/.ipynb_checkpoints/: 5.numpy模块-checkpoint.ipynb  7.DataFrame基础操作巩固-股票分析-checkpoint.ipynb  (+1 more)
datastructure/: 数据结构绪论.xmind  王道答案.md
os_code/os_try/: CMakeLists.txt  main.c  producer_cosumer.c  soft_mutex_1.c  soft_mutex_1_thread.c
os_code/os_try/banker_alg/: allocation.txt  banker_algorithm.c  banker_init.h  max.txt  security_check.h
以防万一/: InCaseOfMyFailure.md
操作系统/: 操作系统概念.xmind  操作系统演示.pptx  操作系统真象还原笔记.md  操作系统笔记.md  进程管理.xmind
政治/: 1000题.docx  政治笔记.md  重要会议.xmind  马克思主义政治经济学.xmind  马哲.xmind  马哲——1.辩证唯物主义.xmind
线性代数/: 线性代数.md
英语/: 单词书.docx  单词书.md  单词表.docx  英语杂记.md  英语阅读.docx  阅读训练.md
计算机组成原理/: 一、计算机系统概述.md  主存储器和cpu的连接.xmind  存储器的分类.xmind  工作簿1.xlsx  微指令编码方式.pptx  微操作命令分析.xmind  微程序控制器.xmind  总线.xmind  数的表示.xmind  流水线.xmind  计算机的基本组成.xmind  计算机系统概述.xmind  计组-Cache-主存地址映射.md  计组——微程序控制器.md  计组——数的表示和运算.md  计组演示.pptx  计组答案.md  输入输出系统.xmind
计算机网络/: 传输层.xmind  各种协议.xmind  应用层.xmind  数据链路层.xmind  物理层.xmind  网络层.xmind  计算机网络体系结构.xmind  计算机网络演示.pptx  计算机网络笔记.md
计算机网络课设/: rip_data.sql  课设报告.docx
高数/: 不等式--数轴标根法(已编辑).doc  高数.md
(+17 files in other folders)
